# gstGPT-Agent

./: .gitignore  README.md  debug_qdrant.py  docker-compose.yml  package-lock.json  package.json
apps/api/: check_db.py  ingest_data.py  ingest_invoices.py  list_models.py  list_models_to_file.py  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  context.py  database.py
apps/api/app/models/: invoice.py  return_filing.py
apps/api/app/routers/: chat.py  invoices.py  returns.py
apps/api/app/schemas/: invoice.py  returns.py
apps/api/app/services/: agent_tools.py  gst_engine.py  llm_service.py  returns_service.py  vector_store.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/dashboard/counsel/: page.tsx
apps/web/app/dashboard/purchases/: page.tsx
apps/web/app/dashboard/returns/: page.tsx
apps/web/app/dashboard/returns/gstr1/: page.tsx
apps/web/app/dashboard/returns/gstr3b/: page.tsx
apps/web/app/dashboard/sales/: page.tsx
apps/web/components/chat/: tool-widgets.tsx
apps/web/components/ui/: data-table.tsx
docs/: ARCHITECTURE.md  BUSINESS_CASE.md
